[gd_scene load_steps=6 format=3 uid="uid://bwchq5nxc4mdf"]

[ext_resource type="Theme" uid="uid://b8amwfp2xjd5v" path="res://themes/ui.tres" id="1_oi5vj"]
[ext_resource type="Script" path="res://scripts/host_screen.gd" id="2_bcmjm"]
[ext_resource type="Texture2D" uid="uid://be4xldphturmu" path="res://art/sewer_wall.png" id="3_tpfbm"]
[ext_resource type="PackedScene" uid="uid://cqys8unw4grsp" path="res://scenes/screens/race_host_menu.tscn" id="4_3k6ha"]
[ext_resource type="PackedScene" uid="uid://s6a7oe0rjegr" path="res://scenes/screens/hot_potato_host_menu.tscn" id="5_a1yed"]

[node name="HostPage" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_oi5vj")
script = ExtResource("2_bcmjm")

[node name="Background" type="TextureRect" parent="."]
texture_filter = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_tpfbm")

[node name="HostButton" type="Button" parent="."]
custom_minimum_size = Vector2(0, 247)
layout_mode = 2
anchor_left = 0.0925926
anchor_top = 0.631771
anchor_right = 0.912963
anchor_bottom = 0.760417
text = "Host"
metadata/_edit_use_anchors_ = true

[node name="BackButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0925926
anchor_top = 0.789063
anchor_right = 0.912963
anchor_bottom = 0.917708
text = "Back"
metadata/_edit_use_anchors_ = true

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.00416667
anchor_right = 1.0
anchor_bottom = 0.599479
metadata/_edit_use_anchors_ = true

[node name="MarginContainer" type="MarginContainer" parent="ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 85
theme_override_constants/margin_top = 65
theme_override_constants/margin_right = 85

[node name="GameModes" type="VBoxContainer" parent="ScrollContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 40

[node name="ModeOption" type="OptionButton" parent="ScrollContainer/MarginContainer/GameModes"]
custom_minimum_size = Vector2(0, 220)
layout_mode = 2
alignment = 1
clip_text = true
metadata/_edit_use_anchors_ = true

[node name="RaceSettings" parent="ScrollContainer/MarginContainer/GameModes" instance=ExtResource("4_3k6ha")]
visible = false
custom_minimum_size = Vector2(0, 175)
layout_mode = 2

[node name="HotPotatoSettings" parent="ScrollContainer/MarginContainer/GameModes" instance=ExtResource("5_a1yed")]
visible = false
custom_minimum_size = Vector2(0, 350)
layout_mode = 2

[connection signal="pressed" from="HostButton" to="." method="_on_host_button_pressed"]
[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
[connection signal="child_entered_tree" from="ScrollContainer/MarginContainer/GameModes" to="." method="_on_game_modes_child_entered_tree"]
[connection signal="child_exiting_tree" from="ScrollContainer/MarginContainer/GameModes" to="." method="_on_game_modes_child_exiting_tree"]
[connection signal="child_order_changed" from="ScrollContainer/MarginContainer/GameModes" to="." method="_on_game_modes_child_order_changed"]
[connection signal="item_selected" from="ScrollContainer/MarginContainer/GameModes/ModeOption" to="." method="_on_mode_option_item_selected"]
